# IntoTheDeep

./: .gitmodules  build.dependencies.gradle  settings.gradle
FtcRobotController/: build.gradle
TeamCode/: build.gradle
TeamCode/src/limelight/: pipeline.py
TeamCode/src/main/cpp/: CMakeLists.txt  sim.cpp
TeamCode/src/main/cpp/include/: RK_45.cpp  integrator.cpp  integrator.h
TeamCode/src/main/java/choreo/: Choreo.java
TeamCode/src/main/java/choreo/trajectory/: SwerveSample.kt  Trajectory.java  TrajectorySample.java
TeamCode/src/main/java/choreo/util/: AllianceFlipUtil.kt
TeamCode/src/main/kotlin/kotunil/: JsExport.kt  JsName.kt
TeamCode/src/main/kotlin/sigmacorns/: Tele.kt  Teleop.kt
TeamCode/src/main/limelight/: pipeline.py
TeamCode/src/test/kotlin/sigmacorns/: ButtonTest.kt  MecanumSimTest.kt  OpModeTest.kt
paths/: New Path.traj  YAY.chor  uhh.traj
paths/base/: COPE.traj  Dropoff 1.traj  Dropoff 2.traj  Dropoff 3.traj  Dropoff 4.traj  Dropoff 5.traj  Post Preload.traj  Preload.traj  grab_specimen.traj  push_specimen.traj  score_first_specimen.traj  score_specimen.traj
paths/choreo/: Ascent.traj  Dropoff 1.traj  Dropoff 2.traj  Dropoff 3.traj  Dropoff 4.traj  Dropoff 5.traj  Dropoff.traj  HOPE.traj  Pickup_1.traj  Pickup_2.traj  Pickup_3.traj  Post Preload.traj  Preload.traj  Score_1.traj  Score_2.traj  Score_3.traj  base.chor  grab_specimen.traj  preload_specimen.traj  push_specimen.traj  score_first_specimen.traj  score_specimen.traj  score_specimen1.traj  score_specimen2.traj  score_specimen3.traj  score_specimen4.traj  straight back.traj
(+230 files in other folders)
